# lex

./: .gitignore  AGENTS.md  ATTACK-REPORT.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  REPRODUCIBILITY.md  rust-toolchain.toml
.github/workflows/: ci.yml  coq.yml
crates/lex-cli/: Cargo.toml
crates/lex-cli/src/: main.rs
crates/lex-core/: Cargo.toml
crates/lex-core/benches/: lex_pipeline.rs
crates/lex-core/examples/: hello-lex.rs
crates/lex-core/src/: ast.rs  certificate.rs  compose.rs  debruijn.rs  decide.rs  decision_table.rs  effects.rs  elaborate.rs  elaboration_cert.rs  evaluate.rs  fuel.rs  level_check.rs  levels.rs  lexer.rs  lib.rs  obligations.rs  open_world.rs  oracle_termination.rs  parser.rs  prelude.rs  pretty.rs  principles.rs  smt.rs  temporal.rs  token.rs  tty.rs  typecheck.rs
crates/lex-core/src/core_calculus/: cert.rs  digest.rs  hole.rs  level.rs  mod.rs  monotone.rs  oracle.rs  principle.rs  summary.rs  temporal.rs  tests.rs
crates/lex-core/tests/: adgm_rules.rs  adversarial_attacks.rs  cycle3_admissibility_properties.proptest-regressions  cycle3_admissibility_properties.rs  defeasible_tie_rejection.rs  discretion_hole_contract.rs  fill_effect_flow.rs  proof_pipeline_e2e.rs  proptest_typecheck.rs  seychelles_ibc_rules.rs
crates/lex-diag/: Cargo.toml
crates/lex-diag/src/: category.rs  coverage.rs  error.rs  lib.rs  render.rs
crates/mez-core-min/: Cargo.toml
crates/mez-core-min/src/: canonical.rs  digest.rs  domain.rs  error.rs  lib.rs
docs/: getting-started.md  language-reference.md  language-spec.md
docs/architecture/frontier-work/: F164-LEX-COQ-CLOSURES.md
docs/frontier-work/: 08-lex-core-calculus.md
examples/: discretion-hole-fill-frontier.lex  discretion-hole-frontier.lex
formal/: README.md  SN-PROOF-SKETCH.md
formal/coq/: .FlatAdmissibleSN.aux  .LexCore.aux  FlatAdmissibleSN.glob  FlatAdmissibleSN.v  FlatAdmissibleSN.vo  LexCore.glob  LexCore.v  LexCore.vo
formal/lean/: LexCore.lean
