[workspace]
resolver = "2"
members = [
    "crates/lex-core",
    "crates/lex-diag",
    "crates/lex-cli",
    "crates/mez-core-min",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "Apache-2.0"

[workspace.dependencies]
# Lex vendors the subset of mez-core it depends on (CanonicalBytes,
# sha256_digest, ComplianceDomain) as a standalone crate, so a cold clone of
# this repository compiles without requiring an external kernel checkout.
#
# The `kernel-integration` feature on `lex-core` switches foundational types
# to the kernel tree's full `mez-core` crate at `../kernel/mez/crates/mez-core`,
# for ecosystem builds that want byte-identical shared infrastructure across
# Lex and the kernel. The kernel path dependency is declared directly on
# `lex-core` as an optional dep, so a cold clone without a sibling kernel
# checkout still resolves cleanly when the feature is off.
mez-core-min = { path = "crates/mez-core-min" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Testing
proptest = "1"
criterion = "0.5"
