[package]
name = "lex-core"
description = "Lex: A Logic for Jurisdictional Rules — parser, type checker, evaluator, and proof obligation generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
# Switch foundational types from the bundled standalone `mez-core-min` crate
# to the kernel tree's full `mez-core` at `../kernel/mez/crates/mez-core`.
# Off by default — a cold clone of this repository compiles without the
# kernel checked out as a sibling directory.
kernel-integration = ["dep:mez-core"]

[dependencies]
mez-core-min = { workspace = true }
# Optional: kernel-integration feature activates the full kernel mez-core at
# the sibling path. Unresolved unless the feature is enabled, so a cold clone
# without a sibling kernel checkout compiles without this path being present.
mez-core = { path = "../../../kernel/mez/crates/mez-core", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "lex_pipeline"
harness = false
