[package]
name = "lex-diag"
description = "Structured diagnostic ontology for Lex elaboration errors — controlled-English error messages, ontology coverage as soundness property"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mez-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
